--- a/register.html
+++ b/register.html
@@ -8,7 +8,6 @@
 
    <!-- custom css file link  -->
   <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
 :root{
    --main-color:#DA2C32;
@@ -369,8 +368,7 @@ section{
 }
 /*building background*/
 .home{
-   background-image: url('https://images.unsplash.com/photo-1582407947304-fd86f028f716?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHw%3D&w=1000&q=80');
-background-size: cover;
+
    background-position: center;   
 }
 /*for center of the page*/
@@ -421,7 +419,7 @@ background-size: cover;
    padding-top: 1rem;
 }
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<link rel="stylesheet" >
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
